--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Beg for Bags">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta http-equiv="refresh" content="1;url=http://redirect-to-this-page.com">
+    <meta http-equiv="refresh" content="1;url=https://shop.begforbags.com">
 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
